[gd_scene load_steps=38 format=3 uid="uid://dkbbjrbsid8xv"]

[ext_resource type="Script" path="res://Script/level_1.gd" id="1_nyib2"]
[ext_resource type="PackedScene" uid="uid://caws4swsuph64" path="res://Scenes/Resource/jack_frost.tscn" id="2_fwmae"]
[ext_resource type="Texture2D" uid="uid://i5lae6hc5t22" path="res://Background/Scenes/Clouds.png" id="2_p82ck"]
[ext_resource type="Texture2D" uid="uid://b7p3a7rppdr8n" path="res://Sprite/Concentracion/Vida1.png" id="3_85ae5"]
[ext_resource type="Script" path="res://Script/Mind.gd" id="4_wikyq"]
[ext_resource type="Texture2D" uid="uid://dmrhndk3yp3hb" path="res://Sprite/Up/Warning.png" id="5_4m1b5"]
[ext_resource type="AudioStream" uid="uid://byotrlvf5kowi" path="res://BGM/26_bell1.wav" id="5_ykl1t"]
[ext_resource type="AudioStream" uid="uid://sjvlbjy8jlja" path="res://BGM/Forest_Sage.mp3" id="6_04jv4"]
[ext_resource type="Texture2D" uid="uid://et4g5dd6na3y" path="res://Sprite/Up/Song.png" id="6_auom5"]
[ext_resource type="PackedScene" uid="uid://bawgxnerfo143" path="res://Scenes/Resource/nubes.tscn" id="6_trtye"]
[ext_resource type="Texture2D" uid="uid://buwaaxvo7npvd" path="res://Sprite/Up/Flecha1.png" id="7_0yk2e"]
[ext_resource type="Script" path="res://Script/Player.gd" id="7_62of3"]
[ext_resource type="Texture2D" uid="uid://clse6sjtlxfcu" path="res://Tilemap/Tiles_png.png" id="7_puuix"]
[ext_resource type="Script" path="res://Script/NoteGeneratorS.gd" id="8_c170e"]
[ext_resource type="Script" path="res://Script/NoteGeneratorT.gd" id="8_lq02a"]
[ext_resource type="Texture2D" uid="uid://dhxnkninjbrxg" path="res://Sprite/Up/Flecha2.png" id="8_pcejc"]
[ext_resource type="Texture2D" uid="uid://dr0ekpqumqo46" path="res://Sprite/Up/Flecha3.png" id="9_uw8dg"]
[ext_resource type="Script" path="res://Script/NoteGeneratorC.gd" id="10_4v12d"]
[ext_resource type="Texture2D" uid="uid://3n5wut7t8xip" path="res://Sprite/Up/Flecha4.png" id="10_o5cxm"]
[ext_resource type="Texture2D" uid="uid://ckaq04ts4bwb3" path="res://Sprite/Up/Flecha5.png" id="11_7q3kj"]
[ext_resource type="Script" path="res://Script/Combo.gd" id="11_48ljl"]
[ext_resource type="Script" path="res://Script/NoteGeneratorX.gd" id="11_s50s3"]
[ext_resource type="Texture2D" uid="uid://dc35um73wcuq2" path="res://Tilemap/Cool1.png" id="12_lject"]
[ext_resource type="Texture2D" uid="uid://yhf803fkaqhn" path="res://Tilemap/Cool2.png" id="13_hsb3v"]
[ext_resource type="PackedScene" uid="uid://bylcikgdt7dc6" path="res://Scenes/Resource/arboles.tscn" id="14_xxb4u"]
[ext_resource type="PackedScene" uid="uid://dufjy7dhrsmis" path="res://Scenes/Resource/arbustos.tscn" id="15_7xxva"]
[ext_resource type="PackedScene" uid="uid://dxus57hljbe3p" path="res://Scenes/Resource/flores.tscn" id="16_kc3d7"]
[ext_resource type="Texture2D" uid="uid://bv6jyr7i7u5dh" path="res://Tilemap/Bad1.png" id="20_28405"]
[ext_resource type="Texture2D" uid="uid://djyfg7twicfxu" path="res://Tilemap/Bad2.png" id="21_tcrgc"]
[ext_resource type="Script" path="res://Script/VentanaPausa.gd" id="30_hbsb7"]
[ext_resource type="Texture2D" uid="uid://culdsrdoorlvn" path="res://Tilemap/Pausa.png" id="31_1ffo1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v4t1c"]
size = Vector2(89.5625, 50.25)

[sub_resource type="SpriteFrames" id="SpriteFrames_eetou"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_4m1b5")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": ExtResource("5_4m1b5")
}],
"loop": true,
"name": &"Alert",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_auom5")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": ExtResource("6_auom5")
}],
"loop": true,
"name": &"Song",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_0yk2e")
}, {
"duration": 1.0,
"texture": ExtResource("8_pcejc")
}, {
"duration": 1.0,
"texture": ExtResource("9_uw8dg")
}, {
"duration": 1.0,
"texture": ExtResource("10_o5cxm")
}, {
"duration": 1.0,
"texture": ExtResource("11_7q3kj")
}],
"loop": true,
"name": &"Up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_cl6ve"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_tcrgc")
}, {
"duration": 1.0,
"texture": ExtResource("20_28405")
}],
"loop": true,
"name": &"Bad",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_lject")
}, {
"duration": 1.0,
"texture": ExtResource("13_hsb3v")
}],
"loop": true,
"name": &"Cool",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p66gh"]
texture = ExtResource("7_puuix")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.25, -2.75, 16.5, -3, 17.5, 16, -15.75, 16.5)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.75, -3, 16.75, -3.25, 16, 15.5, -15.75, 15.75)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.75, -3.75, 16.25, -3.5, 15.75, 15, -15.25, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.5564, -17.3241, -17.3241, 15.2028, 16.9706, 15.2028, 16.2635, -16.2635)
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.5, -16.5, -16.75, 15, 15.5, 15.5, 15.75, -15.5)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16.5, -16, 16, 15.25, 16, 16.25, -15.5)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.5, -16.75, -15.75, 14.75, 15.75, 15.5, 15.75, -16.25)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -15.75, 15.25, -16.25, 15.25, 15, -15.5, 15.25)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16.75, 15.75, -16.5, 16, 15.75, -17.75, 15.5)
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.2635, -16.2635, -16.617, 15.2028, 15.2028, 15.2028)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(15.5, -16.75, 15.75, 15.75, -16.25, 15.25, 15, -14.75)
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.75, -17, -16.25, 16, 16, 15, 15.75, -16)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.25, -16.5, -16, 15.75, 15, 15.5, 16, -15.75)
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0

[sub_resource type="TileSet" id="TileSet_myfdc"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_p66gh")

[sub_resource type="SpriteFrames" id="SpriteFrames_38ihk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("31_1ffo1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Level1" type="Node2D"]
script = ExtResource("1_nyib2")

[node name="JackFrost" parent="." instance=ExtResource("2_fwmae")]
z_index = 10

[node name="HitCircle" type="Area2D" parent="."]
position = Vector2(220, 224)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitCircle"]
shape = SubResource("RectangleShape2D_v4t1c")
debug_color = Color(0.964706, 0, 0.498039, 0.419608)

[node name="HitCross" type="Area2D" parent="."]
position = Vector2(220, 164)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitCross"]
shape = SubResource("RectangleShape2D_v4t1c")
debug_color = Color(0, 0.396078, 0.984314, 0.419608)

[node name="HitSquare" type="Area2D" parent="."]
position = Vector2(220, 104)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitSquare"]
shape = SubResource("RectangleShape2D_v4t1c")
debug_color = Color(0.898039, 0, 0.768627, 0.419608)

[node name="HitTriangle" type="Area2D" parent="."]
position = Vector2(220, 44)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitTriangle"]
shape = SubResource("RectangleShape2D_v4t1c")
debug_color = Color(0, 0.631373, 0.458824, 0.419608)

[node name="Mind" type="Node2D" parent="."]
position = Vector2(65, 67)

[node name="Mind" type="Sprite2D" parent="Mind"]
texture = ExtResource("3_85ae5")
script = ExtResource("4_wikyq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Mind/Mind"]
sprite_frames = SubResource("SpriteFrames_eetou")
animation = &"new_animation"

[node name="Timer" type="Timer" parent="Mind/Mind/AnimatedSprite2D"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ykl1t")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_04jv4")
autoplay = true

[node name="Player" type="Node2D" parent="."]
script = ExtResource("7_62of3")

[node name="NoteGeneratorS" type="Node2D" parent="."]
position = Vector2(1205, 104)
script = ExtResource("8_c170e")

[node name="TimerS" type="Timer" parent="NoteGeneratorS"]
wait_time = 1.3

[node name="NoteGeneratorT" type="Node2D" parent="."]
position = Vector2(1205, 44)
script = ExtResource("8_lq02a")

[node name="TimerT" type="Timer" parent="NoteGeneratorT"]
wait_time = 2.2

[node name="NoteGeneratorC" type="Node2D" parent="."]
position = Vector2(1205, 224)
script = ExtResource("10_4v12d")

[node name="TimerC" type="Timer" parent="NoteGeneratorC"]
wait_time = 0.4

[node name="NoteGeneratorX" type="Node2D" parent="."]
position = Vector2(1205, 164)
script = ExtResource("11_s50s3")

[node name="TimerX" type="Timer" parent="NoteGeneratorX"]
wait_time = 3.6

[node name="Combo" type="Sprite2D" parent="."]
position = Vector2(920, 500)
script = ExtResource("11_48ljl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Combo"]
sprite_frames = SubResource("SpriteFrames_cl6ve")
animation = &"Bad"

[node name="Timer" type="Timer" parent="Combo"]

[node name="Background" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="Background"]

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxBackground"]
position = Vector2(646, 274.25)
scale = Vector2(1.232, 1.168)
texture = ExtResource("2_p82ck")

[node name="Arboles" parent="Background" instance=ExtResource("14_xxb4u")]

[node name="Arbustos" parent="Background" instance=ExtResource("15_7xxva")]

[node name="Flores" parent="Background" instance=ExtResource("16_kc3d7")]

[node name="Nubes" parent="Background" instance=ExtResource("6_trtye")]

[node name="TileMap" type="TileMap" parent="Background"]
tile_set = SubResource("TileSet_myfdc")
format = 2
layer_0/tile_data = PackedInt32Array(2359296, 65536, 0, 2359298, 65536, 0, 2359300, 327680, 3, 2490374, 65536, 0, 2490376, 65536, 0, 2490378, 65536, 0, 2490380, 65536, 0, 2490382, 65536, 0, 2490384, 65536, 0, 2359314, 393216, 3, 2359316, 65536, 0, 2359318, 65536, 0, 2228248, 393216, 3, 2228250, 65536, 0, 2228252, 65536, 0, 2228254, 65536, 0, 2228256, 65536, 0, 2228258, 65536, 0, 2228260, 327680, 3, 2359334, 327680, 3, 2490408, 65536, 0, 2490410, 65536, 0, 2490412, 65536, 0, 2490414, 65536, 0, 2490416, 65536, 0, 2490418, 65536, 0, 2490420, 65536, 0, 2490422, 65536, 0, 2490424, 65536, 0, 2490426, 65536, 0, 2490428, 65536, 0, 2490430, 65536, 0, 2490432, 65536, 0, 2490434, 65536, 0, 2490436, 65536, 0, 2490438, 65536, 0, 2490440, 65536, 0, 2490372, 327680, 4, 2490386, 393216, 4, 2359320, 393216, 4, 2490406, 327680, 4, 2359332, 327680, 4, 2621440, 0, 1, 2621442, 65536, 1, 2621444, 131072, 1, 2621446, 196608, 1, 2621448, 262144, 1, 2621450, 0, 1, 2621452, 65536, 1, 2621454, 131072, 1, 2621456, 196608, 1, 2621458, 196608, 1, 2621460, 196608, 1, 2359322, 262144, 5, 2359324, 262144, 5, 2359326, 262144, 5, 2359328, 262144, 5, 2359330, 262144, 5, 2490404, 262144, 5, 2490402, 262144, 5, 2490400, 262144, 5, 2490398, 262144, 5, 2490396, 262144, 5, 2490388, 262144, 5, 2490390, 262144, 5, 2490392, 262144, 5, 2490394, 262144, 5, 2490368, 262144, 5, 2490370, 262144, 5, 2621462, 196608, 1, 2621464, 196608, 1, 2621466, 262144, 1, 2621468, 0, 1, 2621470, 65536, 1, 2621472, 131072, 1, 2621474, 131072, 1, 2621476, 0, 1, 2621478, 65536, 1, 2621480, 65536, 1, 2621482, 65536, 1, 2621484, 131072, 1, 2621486, 131072, 1, 2621488, 131072, 1, 2621490, 131072, 1, 2621492, 0, 1, 2621494, 196608, 1, 2621496, 65536, 1, 2621498, 131072, 1, 2621500, 131072, 1, 2621502, 0, 1, 2621504, 0, 1, 2621506, 131072, 1, 2621508, 131072, 1, 2621510, 131072, 1, 2621512, 131072, 1)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 175.0
offset_top = 13.0
offset_right = 267.0
offset_bottom = 254.0
color = Color(0.0588235, 0.509804, 1, 0.619608)

[node name="Popup" type="Popup" parent="."]
transparent_bg = true
initial_position = 1
size = Vector2i(1024, 500)
always_on_top = true
content_scale_mode = 1
script = ExtResource("30_hbsb7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Popup"]
z_index = 3
sprite_frames = SubResource("SpriteFrames_38ihk")
offset = Vector2(500, 300)

[node name="ColorRect" type="ColorRect" parent="Popup"]
offset_left = 410.0
offset_top = 250.0
offset_right = 590.0
offset_bottom = 350.0

[connection signal="body_exited" from="HitCircle" to="NoteGeneratorC" method="_on_hit_circle_body_exited"]
[connection signal="body_exited" from="HitCross" to="NoteGeneratorX" method="_on_hit_cross_body_exited"]
[connection signal="body_exited" from="HitSquare" to="NoteGeneratorS" method="_on_hit_square_body_exited"]
[connection signal="body_exited" from="HitTriangle" to="NoteGeneratorT" method="_on_hit_triangle_body_exited"]
[connection signal="timeout" from="Mind/Mind/AnimatedSprite2D/Timer" to="Mind/Mind" method="_on_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer2D2" to="Mind/Mind" method="_on_audio_stream_player_2d_2_finished"]
[connection signal="bajarVida" from="Player" to="Mind/Mind" method="_on_player_bajar_vida"]
[connection signal="bandera" from="Player" to="Mind/Mind" method="_on_player_bandera"]
[connection signal="comboFlower" from="Player" to="." method="_on_player_combo_flower"]
[connection signal="subirVida" from="Player" to="Mind/Mind" method="_on_player_subir_vida"]
[connection signal="notaOut" from="NoteGeneratorS" to="Mind/Mind" method="_on_note_generator_s_nota_out"]
[connection signal="timeout" from="NoteGeneratorS/TimerS" to="NoteGeneratorS" method="_on_timer_s_timeout"]
[connection signal="notaOut" from="NoteGeneratorT" to="Mind/Mind" method="_on_note_generator_t_nota_out"]
[connection signal="timeout" from="NoteGeneratorT/TimerT" to="NoteGeneratorT" method="_on_timer_timeout"]
[connection signal="notaOut" from="NoteGeneratorC" to="Mind/Mind" method="_on_note_generator_c_nota_out"]
[connection signal="timeout" from="NoteGeneratorC/TimerC" to="NoteGeneratorC" method="_on_timer_timeout"]
[connection signal="notaOut" from="NoteGeneratorX" to="Mind/Mind" method="_on_note_generator_x_nota_out"]
[connection signal="timeout" from="NoteGeneratorX/TimerX" to="NoteGeneratorX" method="_on_timer_timeout"]
[connection signal="timeout" from="Combo/Timer" to="Player" method="_on_timer_timeout"]
[connection signal="window_input" from="Popup" to="Popup" method="_on_window_input"]
